--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Modern Attractive Portfolio CSS */
+/* /* Modern Attractive Portfolio CSS */
 
 * {
   margin: 0;
@@ -489,3 +489,4 @@ html {
 ::-webkit-scrollbar-thumb:hover {
   background: var(--primary-gradient);
 }
+ */
